@@ -4,5 +4,5 @@ import java.util.concurrent.ExecutorService;
 import java.util.concurrent.Executors;
 
 public class ThreadPool {
-    public static final ExecutorService pool = Executors.newCachedThreadPool();
+    public static final ExecutorService pool = Executors.newVirtualThreadPerTaskExecutor();
 }
